# outreach

./: .gitignore  README.md  _parser.py  apis.py  combine.py  main.py  outreach_parser.py  outreach_sheet.py  pyproject.toml  run.py  test.js  test.py  utils.py
outreach/outreach_data_1/email_dump/: adroll_com_57defc2ba6da987afd96fe10.json  adroll_com_5ba0d5c0f874f730300de493.json  adroll_com_5fb7b423646c1a00010ddf3c.json  adroll_com_6017f3b1251aad0001246b46.json  adroll_com_603772ad9f1828000105313f.json  adroll_com_605bc3f42c9e300001485bc8.json  adroll_com_60c0b92f702e120001cf9e75.json  adroll_com_60df8f804948850001752f6b.json  adroll_com_610b78d830bb6e00010fa446.json  adroll_com_636bf0414d980f00017a405d.json  adroll_com_63af3a636964b70001da42ed.json  adroll_com_641b645eeeebcb0001e68a29.json  adroll_com_647b217ef598680001f501e6.json  adroll_com_649aeacf6c401b00014ce304.json  adroll_com_64b991abf680980001d97637.json  adroll_com_6541d15dcd816d0001728f40.json  adroll_com_66f29bdeb1a606000155b69b.json  adroll_com_66f29be347f72000018a6547.json  adroll_com_66face300e98b7000183f538.json  adroll_com_66fe85e42eb8a1000129cdf5.json  adroll_com_67014e00b55c3e000165047d.json  aloa_co_601a36a667ee120001d124f0.json  aloa_co_60dbeef546b872000181e045.json  aloa_co_6611220bca76f500075bfeeb.json  aloa_co_66c5e338364bd00001522128.json
outreach/outreach_data_1/organization/: adroll_com.json  aloa_co.json
outreach/outreach_data_1/people/: adroll_com.json  aloa_co.json
