[tool.poetry]
name = "api-scraping-template"
version = "0.1.0"
description = ""
authors = ["polymorphisma <shrawansunar.6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
webdriver-manager = "4.0.2"
selenium = "4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
